# non_stationary_RL

./: .gitignore  pyproject.toml
non_stationary/: helper.ipynb  use_css_eps_greedy.py  use_eps_greedy.py
non_stationary/agents/: css_eps_greedy.py  epsilon_greedy_agent.py  greedy_agent.py
non_stationary/environment/: multi_arm_env.py  multi_arm_ns.py
non_stationary/utils/: functions.py  plots.py
