[tool.poetry]
name = "non-stationary"
version = "0.1.0"
description = ""
authors = ["AmirHB98 <amirhossein.bagherzadeh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
gym = "^0.26.2"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
